NewArchive/d055d737b34bbe9fc00f8606094eb1a2-d3b114dc330fa79b91c5a218f19e65a9/output
+ g++ -std=c++0x -O2 -Wall -pedantic -pthread main.cpp
main.cpp: In function ‘int main()’:
main.cpp:8:18: error: ‘words’ was not declared in this scope
     std::cout << words << std::endl;
                  ^
